Fix too short line-height for #features h1.druk
On bigger screens.

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -469,6 +469,7 @@ nav a:hover span {
 @media only screen and (min-width: 90rem) {
   #features h1.druk {
     font-size: min(280px, 10.5vw);
+    line-height: 90%;
   }
 }
 
